--- a/onlinetest/src/styles/Home.module.scss
+++ b/onlinetest/src/styles/Home.module.scss
@@ -1,3 +1,29 @@
+.cardLibrary {
+  float: left;
+  width: 30%;
+  margin: 5px;
+}
+
+.paperPayment {
+  text-align: center;
+}
+
+.textCountdown {
+  font-size: 50px;
+}
+
+.textTitleQuiz {
+  margin: auto;
+  width: 80%;
+  text-align: left;
+  font-weight: bold;
+}
+
+.testChoice {
+  font-size: 20px;
+  font-weight: bold;
+}
+
 .main {
   display: flex;
   flex-direction: column;
@@ -97,7 +123,7 @@
 
 .center::before,
 .center::after {
-  content: '';
+  content: "";
   left: 50%;
   position: absolute;
   filter: blur(45px);
@@ -125,7 +151,7 @@
 
 .thirteen::before,
 .thirteen::after {
-  content: '';
+  content: "";
   position: absolute;
   z-index: -1;
 }
